full-moon/tests/cases/fail/parser/table-6/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/table-6
---
error[ast]: unexpected token `=`. = (expected an expression after `=`)
  ┌─ source.lua:2:4
  │
2 │     x = until,
  │       ^

error[ast]: unexpected token `until`. until (unexpected token, this needs to be a statement)
  ┌─ source.lua:2:6
  │
2 │     x = until,
  │         ^^^^^


